test_files/bad/bad_definition_3.ru
def ERROR "this is definitly" "not working"